@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: biff.h,v $
-// Revision      : $Revision: 1.11 $
-// Revision date : $Date: 2005/01/16 22:24:16 $
+// Revision      : $Revision: 1.12 $
+// Revision date : $Date: 2005/01/17 16:41:42 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -139,6 +139,7 @@ public:
 	//  access
 	// ================================================================================
 	guint size (void);
+	gboolean find_mail (std::string mailid, struct header_ &mail);
 	void popup_format (std::string format);
 	class Mailbox * mailbox (guint index);
 	class Mailbox * get (guint uin);
