@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: mailbox.cc,v $
-// Revision      : $Revision: 1.45 $
-// Revision date : $Date: 2005/01/18 13:54:12 $
+// Revision      : $Revision: 1.46 $
+// Revision date : $Date: 2005/01/18 20:21:29 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -720,4 +720,25 @@ Mailbox::save_data (void)
 	biff_->save_para ("use_other_port", use_other_port_);
 	biff_->save_para ("other_port", other_port_);
 	biff_->save_para ("seen", hidden_);
+}
+
+/**
+ *  Search the mailbox for the mail with id {\em mailid}.
+ *
+ *  @param  mailid  Gnubiff mail identifier of the mail to find
+ *  @param  mail    Here the header of the found mail is returned. If no mail
+ *                  with id {\em mailid} exists, {\em mail} remains unchanged.
+ *  @returns        Boolean indicating if a mail exists or not.
+ */
+gboolean 
+Mailbox::find_mail (std::string mailid, header &mail)
+{
+	gboolean ok = false;
+
+	g_mutex_lock (mutex_);
+	if (ok = (unread_.find (mailid) != unread_.end ()))
+		mail = unread_[mailid];
+	g_mutex_unlock (mutex_);
+
+	return ok;
 }
